# codePractice2024

./: .gitignore  CMakeLists.txt
ProblemSolving/: 10_findMinimum.cpp  11_SumOfNumbers.cpp  12_okunsu.cpp  37.cpp  38.cpp  39.cpp  40.cpp  41-2.cpp  41.cpp  my_playground.cpp
first1/: main2.cpp
graphTheory/: 2.cpp
