cmake_minimum_required(VERSION 3.29)
project(first)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_FLAGS "-fexec-charset=CP949")


add_executable(ProblemSolving_my_playground ProblemSolving/my_playground.cpp)
add_executable(ProblemSolving_41-2 ProblemSolving/41-2.cpp)
add_executable(ProblemSolving_41 ProblemSolving/41.cpp)
add_executable(ProblemSolving_40 ProblemSolving/40.cpp)
add_executable(ProblemSolving_39 ProblemSolving/39.cpp)
add_executable(ProblemSolving_38 ProblemSolving/38.cpp)
add_executable(ProblemSolving_37 ProblemSolving/37.cpp)
add_executable(ProblemSolving_13_card ProblemSolving/13_card.cpp)
add_executable(ProblemSolving_12_okunsu ProblemSolving/12_okunsu.cpp)
add_executable(ProblemSolving_11_SumOfNumbers ProblemSolving/11_SumOfNumbers.cpp)
add_executable(ProblemSolving_10_findMinimum ProblemSolving/10_findMinimum.cpp)
add_executable(graphTheory_2 graphTheory/2.cpp)
add_executable(floyd-Warshall_main floyd-Warshall/main.cpp)
add_executable(first1_main first1/main.cpp)
add_executable(dijkstra_main dijkstra/main.cpp)
add_executable(shortestPath_futureCity shortestPath/futureCity.cpp)
add_executable(shortestPath_telegram2 shortestPath/telegram2.cpp)
add_executable(graphTheory_3 graphTheory/3.cpp)
add_executable(graphTheory_4 graphTheory/4.cpp)